--- a/main.html
+++ b/main.html
@@ -9,6 +9,43 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+        <caption>Game Statistics</caption>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Score</th>
+                <th>Level</th>
+                <th>Time Played</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Alice</td>
+                <td>1500</td>
+                <td>5</td>
+                <td>2h 30m</td>
+            </tr>
+            <tr>
+                <td>Bob</td>
+                <td>1200</td>
+                <td>4</td>
+                <td>2h 10m</td>
+            </tr>
+            <tr>
+                <td>Charlie</td>
+                <td>1800</td>
+                <td>6</td>
+                <td>3h 15m</td>
+            </tr>
+            <tr>
+                <td>David</td>
+                <td>900</td>
+                <td>3</td>
+                <td>1h 50m</td>
+            </tr>
+        </tbody>
+    </table>
 
         
 </body>
